--- a/style.css
+++ b/style.css
@@ -38,6 +38,26 @@ body {
   max-width: 650px;
 }
 
+@media screen and (max-width: 375px) {
+  *,
+  html,
+  body {
+    font-size: 12px;
+  }
+
+  .wrapper,
+  .thank-wrapper {
+    width: 100%;
+    padding: 2em;
+    margin: 0 1em;
+  }
+
+  .rate {
+    width: 40px;
+    height: 40px;
+  }
+}
+
 .icon {
   border-radius: 50%;
   background-color: #1b222c;
@@ -64,13 +84,13 @@ body {
   font-size: 1.5rem;
 }
 
-.rate {
+.rates {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.rating {
+.rate {
   border: none;
   border-radius: 50%;
   width: 80px;
@@ -80,7 +100,7 @@ body {
   font-size: 1.8rem;
 }
 
-.rating:hover {
+.rate:hover {
   background-color: var(--primary);
   color: var(--white);
   cursor: pointer;
@@ -91,7 +111,7 @@ body {
   background-color: var(--medium-grey);
 }
 
-.submit {
+#submit {
   color: var(--white);
   background-color: var(--primary);
   border: none;
@@ -105,13 +125,17 @@ body {
   margin-top: 2em;
 }
 
-.submit:hover {
+#submit:hover {
   background-color: var(--white);
   color: var(--primary);
   cursor: pointer;
 }
 
 /* thanks content */
+.hidden {
+  display: none;
+}
+
 .thank-icon {
   display: flex;
   flex-direction: column;
